--- a/test/test.tex
+++ b/test/test.tex
@@ -19,7 +19,7 @@
 }
 \tikzset{boximg/.style={remember picture,black,thick,draw,inner sep=0pt,outer sep=0pt}}
 
-\title{Emacs Auctex-art.el test presentation}
+\title{Emacs cart.el test presentation}
 \author{Nidish Narayanaa Balaji}
 
 \begin{document}
