--- a/README.org
+++ b/README.org
@@ -55,6 +55,7 @@ Usage is quite straightforward. During the first time, it's recommended to follo
 1. It might be interesting to add capabilities to capture mouse drag events and associate them with the curve features of Tikz.
 2. Support for closed figures, fill, etc.
 3. Some mechanism simulating real-time feedback. 
+4. Using the relative coordinates with respect to the pdf page directly (the screen pixel coordinates are used currently) could add robustness.
 * Recommended Reading/Interesting Repositories
 1. The [[https://pgf-tikz.github.io/pgf/pgfmanual.pdf][documentation of Tikz & PGF]].
 2. The [[https://github.com/misohena/el-easydraw][el-easydraw]] package by [[https://github.com/misohena][misohena]] is WYSIWYG implementation of SVG drawing in emacs.
