--- a/cart.org
+++ b/cart.org
@@ -120,7 +120,7 @@
     (while (cart-insert-point)
       (insert (format "%s -- " nopts)))
     (delete-backward-char 4)
-    (insert ";"))
+    (insert ";\n"))
 
   (defun cart-tikz-node (&optional nopts nval)
     "Initiate a tikz \node instance and insert value given by user"
@@ -135,10 +135,3 @@
 #+begin_src emacs-lisp :tangle yes :results none
   (provide 'cart)
 #+end_src
-
-* Example
-#+CAPTION: An example of a graphic drawn using =tikz= and =cart.el=
-#+ATTR_HTML: :width 800px
-#+ATTR_LATEX: :width 400px
-#+ATTR_ORG: :width 100px
-[[./test/pg2samp.png]]
