--- a/cart.org
+++ b/cart.org
@@ -128,7 +128,7 @@
     (save-excursion
       (insert (format "\\node%s at " (cart--optbr nopts)))
       (cart-insert-point)
-      (insert (format " \{%s\};" nval))))
+      (insert (format " \{%s\};\n" nval))))
 #+end_src
 
 ** Provide as PACKAGE
