Got rid of save-excursion in cart-tikz-node. Improved second example.

--- a/test/test.tex
+++ b/test/test.tex
@@ -122,47 +122,89 @@
     \pgftransformshift{\pgfpointanchor{current page}{center}}
     
     % \draw[->] (0,0) circle-- (2,2);
-    
-    \draw[fill=brown!50] (-5.610738, -0.191781) -- (-4.939597, 0.410959) --
-    (-4.604027, 0.739726) -- (-4.013423, 1.342466) -- (-3.543624,
-    1.753425) -- (-2.966443, 1.506849) -- (-2.577181, 1.054795) --
-    (-1.973154, 0.602740) -- (-1.597315, 0.301370) -- (-1.208054,
-    -0.054795) -- (-0.979866, -0.410959);
-    \draw[fill=brown!50] (-1.691275, 0.397260) -- (-1.261745, 0.643836) --
-    (-0.604027, 1.315068) -- (-0.013423, 1.821918) -- (0.308725,
-    2.013699) -- (0.899329, 1.698630) -- (2.040268, 1.013699) --
-    (2.711409, 0.369863) -- (3.503356, -0.054795);
+
+    % Sky
+    \draw[fill=blue!20] (-5.570470, -0.452055) -- (-5.570470,
+    2.958904) -- (3.489933, 3.301370) -- (3.409396, 0.013699);
+    % Birds
+    \draw[fill=black] (-4.429530, 2.438356) -- (-4.214765, 2.465753)
+    -- (-4.013423, 2.410959) -- (-3.892617, 2.342466) -- (-3.865772,
+    2.260274) -- (-3.852349, 2.191781) -- (-3.812081, 2.328767) --
+    (-3.221477, 2.506849) -- (-3.395973, 2.575342) -- (-3.583893,
+    2.575342) -- (-3.785235, 2.438356) -- (-3.865772, 2.410959) --
+    (-4.013423, 2.534247) -- (-4.268456, 2.534247) -- (-4.456376,
+    2.465753);
+    \draw[fill=black] (-3.261745, 1.972603) -- (-3.181208, 2.041096)
+    -- (-3.006711, 2.041096) -- (-2.899329, 1.945205) -- (-2.872483,
+    1.849315) -- (-2.684564, 2.095890) -- (-2.617450, 2.095890) --
+    (-2.496644, 2.041096) -- (-2.523490, 2.095890) -- (-2.738255,
+    2.123288) -- (-2.832215, 2.054795) -- (-2.953020, 2.013699) --
+    (-3.020134, 2.109589) -- (-3.261745, 1.972603); 
+    \draw[fill=black] (-2.617450, 2.616438) -- (-2.563758, 2.684932)
+    -- (-2.362416, 2.780822) -- (-2.147651, 2.767123) -- (-1.932886,
+    2.602740) -- (-1.785235, 2.424658) -- (-1.637584, 2.246575) --
+    (-1.583893, 2.452055) -- (-1.449664, 2.616438) -- (-1.221477,
+    2.753425) -- (-1.020134, 2.794521) -- (-0.791946, 2.794521) --
+    (-0.523490, 2.753425) -- (-0.644295, 2.808219) -- (-0.926174,
+    2.876712) -- (-1.261745, 2.849315) -- (-1.503356, 2.753425) --
+    (-1.570470, 2.657534) -- (-1.651007, 2.767123) -- (-1.798658,
+    2.780822) -- (-2.080537, 2.849315) -- (-2.295302, 2.863014);
+    % Mountains
+    \draw[fill=brown!50] (-2.375839, -0.287671) -- (-1.691275,
+    0.397260) -- (-1.261745, 0.643836) -- (-0.604027, 1.315068) --
+    (-0.013423, 1.821918) -- (0.308725, 2.013699) -- (0.899329,
+    1.698630) -- (2.040268, 1.013699) -- (2.711409, 0.369863) --
+    (3.503356, -0.054795); 
+    \draw[fill=brown!50] (-5.704698, -0.547945) -- (-5.610738,
+    -0.191781) -- (-4.939597, 0.410959) -- (-4.604027, 0.739726) --
+    (-4.013423, 1.342466) -- (-3.543624, 1.753425) -- (-2.966443,
+    1.506849) -- (-2.577181, 1.054795) -- (-1.973154, 0.602740) --
+    (-1.597315, 0.301370) -- (-1.208054, -0.054795) -- (-0.979866,
+    -0.410959); 
+    % Sun
     \draw[fill=orange, yshift=-0.5mm] (-2.469799, 1.027397) --
     (-2.416107, 1.136986) -- (-2.147651, 1.273973) -- (-1.785235,
     1.315068) -- (-1.476510, 1.315068) -- (-1.087248, 1.150685) --
     (-0.912752, 1.068493) -- (-1.221477, 0.698630) -- (-1.704698,
-    0.452055) -- (-2.456376, 1.013699); 
-    \draw[blue] (-1.234899, 0.602740) -- (-0.697987, 0.246575) --
-    (-0.147651, -0.095890) -- (0.080537, -0.616438) -- (-0.308725,
-    -1.328767) -- (-0.966443, -1.712329);
-    \draw[blue] (-0.966443, -0.452055) -- (-0.953020, -0.698630) --
-    (-1.087248, -0.931507) -- (-1.610738, -1.410959) -- (-2.161074,
-    -1.657534) -- (-2.899329, -1.931507) -- (-3.624161, -2.287671) --
-    (-4.348993, -2.561644) -- (-5.033557, -2.684932);
-    \draw[blue] (-0.953020, -1.753425) -- (-1.114094, -1.876712) --
-    (-1.127517, -2.246575) -- (-1.114094, -2.397260) -- (-0.684564,
-    -2.589041);
-    \draw[blue] (-1.194631, 0.136986) -- (-0.979866, -0.109589);
-    \draw[blue] (-0.536913, -0.109589) -- (-0.456376, -0.123288) --
-    (-0.469799, -0.273973) -- (-0.362416, -0.315068); 
-    \draw[blue] (-0.630872, -0.616438) -- (-0.550336, -0.931507) --
-    (-0.751678, -1.054795); 
-    \draw[blue] (-0.577181, -1.095890) -- (-0.791946, -1.383562) --
-    (-1.006711, -1.479452);
-    \draw[blue] (-1.516779, -1.616438) -- (-1.731544, -1.602740) -- (-1.959732, -1.835616);
-    \draw[blue] (-1.382550, -1.931507) -- (-1.436242, -2.041096) --
-    (-1.422819, -2.273973) -- (-1.489933, -2.520548) -- (-1.409396,
-    -2.561644); 
-    \draw[blue] (-2.147651, -2.589041);
-    \draw[blue] (-2.469799, -2.260274) -- (-2.644295, -2.342466) -- (-3.154362, -2.684932);
-    \draw[blue] (-3.302013, -2.397260) -- (-3.463087, -2.397260) --
-    (-3.651007, -2.643836) -- (-3.852349, -2.630137); 
-
+    0.452055) -- (-2.456376, 1.013699);
+    % Banks
+    \draw[fill=green!20] (3.463087, -0.068493) -- (-0.697987,
+    -0.246575) -- (-0.993289, -0.410959) -- (-5.651007, -0.575342) --
+    (-5.570470, -2.917808) -- (3.812081, -2.698630) -- (3.463087,
+    -0.068493);
+    \draw[green!50!black, very thick] (-5.073826, -1.835616) --
+    (-5.006711, -1.753425) -- (-4.939597, -1.863014) -- (-4.859060,
+    -1.780822) -- (-4.778523, -1.849315) -- (-4.684564, -1.726027) --
+    (-4.604027, -1.863014) -- (-4.510067, -1.726027) -- (-4.416107,
+    -1.945205); 
+    \draw[green!50!black, very thick] (-3.436242, -1.219178) --
+    (-3.369128, -1.109589) -- (-3.208054, -1.136986) -- (-3.087248,
+    -1.068493) -- (-2.926174, -1.109589) -- (-2.818792, -1.109589) --
+    (-2.724832, -1.095890) -- (-2.577181, -1.219178); 
+    \draw[green!50!black, very thick] (0.402685, -1.452055) --
+    (0.510067, -1.273973) -- (0.590604, -1.369863) -- (0.724832,
+    -1.301370) -- (0.899329, -1.397260) -- (1.033557, -1.287671) --
+    (1.234899, -1.479452); 
+    \draw[green!50!black, very thick] (2.013423, -0.835616) --
+    (2.093960, -0.726027) -- (2.348993, -0.890411) -- (2.590604,
+    -0.671233) -- (2.791946, -0.835616); 
+    \draw[green!50!black, very thick] (1.557047, -2.397260) --
+    (1.597315, -2.232877) -- (1.758389, -2.315068) -- (1.798658,
+    -2.493151) -- (1.919463, -2.287671) -- (2.000000, -2.342466) --
+    (2.107383, -2.246575) -- (2.510067, -2.315068); 
+    % River
+    \draw[fill=blue!60] (-1.449664, 0.178082) -- (-1.073826, 0.013699)
+    -- (-0.778523, -0.178082) -- (-0.429530, -0.397260) -- (-0.161074,
+    -0.671233) -- (-0.107383, -0.917808) -- (-0.134228, -1.082192) --
+    (-0.322148, -1.356164) -- (-0.617450, -1.575342) -- (-0.885906,
+    -1.780822) -- (-1.046980, -1.917808) -- (-1.154362, -2.246575) --
+    (-0.993289, -2.479452) -- (-0.671141, -2.712329) -- (-0.550336,
+    -2.753425) -- (-5.140940, -2.849315) -- (-4.684564, -2.726027) --
+    (-4.281879, -2.616438) -- (-3.758389, -2.438356) -- (-3.194631,
+    -2.164384) -- (-2.563758, -1.849315) -- (-2.000000, -1.630137) --
+    (-1.530201, -1.410959) -- (-1.154362, -1.013699) -- (-0.939597,
+    -0.698630) -- (-0.966443, -0.452055) -- (-1.073826, -0.219178);
+    % Shrubs
     \draw[fill=green] (-5.503356, -0.424658) -- (-5.503356, -0.273973) --
     (-5.328859, -0.123288) -- (-4.926174, -0.191781) -- (-4.644295,
     0.013699) -- (-4.348993, 0.013699) -- (-3.973154, -0.109589) --
@@ -188,8 +230,8 @@
     -0.273973) -- (1.946309, -0.315068) -- (2.268456, -0.205479) --
     (2.550336, -0.164384) -- (3.046980, -0.205479) -- (3.409396,
     -0.205479) -- (3.543624, 0.013699) -- (3.651007, -0.068493);
-
-    \draw[fill=brown, yshift=-1mm, xshift=2mm] (3.033557, 1.342466) --
+    % Tree
+    \draw[fill=brown, yshift=5mm, xshift=14mm] (3.033557, 1.342466) --
     (2.872483, 0.684932) -- (2.657718, 0.164384) -- (2.255034,
     -0.150685) -- (1.879195, -0.520548) -- (1.785235, -1.356164) --
     (1.825503, -2.178082) -- (1.986577, -2.739726) -- (2.295302,
@@ -214,7 +256,7 @@
     0.753425) -- (2.416107, 0.958904) -- (2.456376, 1.054795) --
     (2.630872, 0.917808) -- (2.818792, 1.082192) -- (2.966443,
     1.383562) -- (3.033557, 1.342466); 
-    \draw[fill=green!50!black, yshift=-1mm, xshift=2mm] (-0.429530,
+    \draw[fill=green!50!black, yshift=5mm, xshift=14mm] (-0.429530,
     -0.452055) -- (-0.805369, -0.493151) -- (-1.181208, -0.657534) --
     (-1.355705, -0.301370) -- (-2.174497, -0.315068) -- (-2.067114,
     0.123288) -- (-2.697987, 0.328767) -- (-2.375839, 0.657534) --
@@ -224,7 +266,7 @@
     0.273973) -- (-1.328859, 0.246575) -- (-1.234899, 0.068493) --
     (-0.979866, -0.136986) -- (-0.375839, -0.150685) -- (-0.161074,
     -0.479452);  
-    \draw[fill=green!50!black, yshift=-1mm, xshift=2mm] (0.389262,
+    \draw[fill=green!50!black, yshift=5mm, xshift=14mm] (0.389262,
     0.082192) -- (-0.040268, 0.260274) -- (-0.684564, 0.958904) --
     (-0.711409, 1.534247) -- (-0.416107, 1.808219) -- (0.067114,
     1.794521) -- (0.228188, 1.534247) -- (0.765101, 1.767123) --
@@ -233,7 +275,7 @@
     (0.885906, 0.465753) -- (0.993289, 0.794521) -- (1.422819,
     1.205479) -- (0.201342, 1.205479) -- (0.000000, 0.917808) --
     (0.590604, 0.547945) -- (0.389262, 0.082192);  
-    \draw[fill=green!50!black, yshift=-1mm, xshift=2mm] (2.308725,
+    \draw[fill=green!50!black, yshift=5mm, xshift=14mm] (2.308725,
     -0.109589) -- (2.496644, -0.246575) -- (3.060403, -0.013699) --
     (3.422819, 0.493151) -- (3.489933, 1.082192) -- (3.610738,
     2.041096) -- (3.127517, 2.082192) -- (2.550336, 2.164384) --
@@ -243,7 +285,16 @@
     0.890411) -- (2.590604, 1.136986) -- (2.671141, 0.904110) --
     (2.845638, 1.150685) -- (3.006711, 0.972603) -- (3.020134,
     0.712329) -- (2.751678, 0.506849) -- (2.751678, 0.164384) --
-    (2.308725, 0.013699) -- (2.308725, -0.109589);  
+    (2.308725, 0.013699) -- (2.308725, -0.109589);
+
+    % Labels
+    \node[draw=black, thick] at (-3.516779, 0.397260) {Mountains};
+    \node[draw=black, thick] at (2.778523, -1.465753) {Tree};
+    \node[draw=black, thick] at (-1.919463, -2.095890) {River};
+    \node[draw=black, thick] at (-2.536913, 3.753425) {Birds};
+    \draw[->] (-2.577181, 3.575342) -- (-2.859060, 2.753425);
+    \node[draw=black, thick] at (-4.550336, -1.342466) {Banks};
+    \node[draw=black, thick] at (-1.664430, 0.821918) {\tiny  Sun};
   \end{tikzpicture}
 \end{frame}
 
